[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/game/ui/OptionsMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game/ui/MainMenu.gd" type="Script" id=2]

[node name="MainMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Main" type="Control" parent="."]
pause_mode = 2
margin_right = 335.0
margin_bottom = 203.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="ColorRect" type="ColorRect" parent="Main"]
self_modulate = Color( 1, 1, 1, 0.737255 )
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
color = Color( 0, 0, 0, 0.807843 )

[node name="Buttons" type="VBoxContainer" parent="Main"]
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 1.1
anchor_bottom = 0.5
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0.5, 0 )
size_flags_horizontal = 3
alignment = 1

[node name="StartButton" type="Button" parent="Main/Buttons"]
margin_right = 268.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "Start"

[node name="ShowCommands" type="Button" parent="Main/Buttons"]
margin_top = 24.0
margin_right = 268.0
margin_bottom = 44.0
grow_horizontal = 2
grow_vertical = 0
text = "Options"

[node name="ExitButton" type="Button" parent="Main/Buttons"]
margin_top = 48.0
margin_right = 268.0
margin_bottom = 68.0
grow_horizontal = 2
text = "Exit"

[node name="TitleLabel" type="Label" parent="Main"]
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.4
margin_top = 10.0
margin_bottom = 14.3
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Menu"
align = 1

[node name="OptionsMenu" parent="." instance=ExtResource( 1 )]
pause_mode = 2
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 268.0
margin_bottom = 160.0

[node name="VBoxContainer" parent="OptionsMenu/Panel/ScrollContainer" index="0"]
margin_right = 14.0
margin_bottom = 140.0

[connection signal="pressed" from="Main/Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Main/Buttons/ShowCommands" to="." method="_on_show_commands_button_pressed"]
[connection signal="pressed" from="Main/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="options_menu_return" from="OptionsMenu" to="." method="_on_commands_cancel_pressed"]

[editable path="OptionsMenu"]
